// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with blocks renders the blocks 1`] = `
<div
  className="Diagram"
>
  <div
    className="Diagram-blocks"
  >
    <BlockDetail
      id="0"
      key="0"
      name="Block 1"
      x={0}
      y={0}
    />
    <BlockDetail
      id="1"
      key="1"
      name="Block 2"
      x={0}
      y={0}
    />
  </div>
  <FloatingActionButton
    className="Diagram-add"
    disabled={false}
    mini={false}
    onClick={[Function]}
    secondary={true}
    zDepth={3}
  >
    <ContentAdd />
  </FloatingActionButton>
</div>
`;

exports[`without blocks renders without crashing 1`] = `
<div
  className="Diagram"
>
  <div
    className="Diagram-blocks"
  />
  <FloatingActionButton
    className="Diagram-add"
    disabled={false}
    mini={false}
    onClick={[Function]}
    secondary={true}
    zDepth={3}
  >
    <ContentAdd />
  </FloatingActionButton>
</div>
`;
